# l0kus-messenger

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
src/: config.rs  crypto.rs  engine.rs  file_transfer.rs  headless.rs  identity.rs  main.rs  message.rs  settings.rs
src/net/: behaviour.rs  mod.rs  protocol.rs  swarm.rs
src/ui/: app.rs  events.rs  files.rs  mod.rs  theme.rs  view.rs
