[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "l0kus-messanger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["quic", "tcp", "mdns", "identify", "request-response", "ping", "yamux", "noise", "tokio", "macros", "cbor"] }
ratatui = "0.30.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vodozemac = "0.10.0"
zeroize = "1.8.2"
